fixed weather illustration and unit alignments

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -67,12 +67,11 @@ footer {
     text-transform: capitalize;
 }
 .weather-illustration {
-    font-family:'Inconsolata', monospace;
     max-width: 80px;
     max-height: 70px;
     position: relative;
     top: -10px;
-    left: -25px;
+    left: -5px;
     
 }
 .temperature {
@@ -85,7 +84,7 @@ footer {
 .units {
     position: relative;
     top: -42px;
-    left: -72px;
+    left: -70px;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-weight: 100;
     font-size: 18px;
